--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo"><span class="logo_span">Web</span>Studio</a>
+            <a href="/" class="logo">Web<span class="logo_span"></span>Studio</a>
             <ul class="nav_menu">
-                <li><a href="">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         
-        <address>
-            <ul class="nav_address">
+        <address class="nav_address">
+            <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
