--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="/" class="logo">Web<span class="logo_span"></span>Studio</a>
-            <ul class="nav_menu">
-                <li><a href="./index.html">Studio</a></li>
+        <nav class="nav_menu">
+            <a href="/" class="logo">Web<span class="logo_span">Studio</span></a>
+            <ul>
+                <li><a href="/">Studio</a></li>  
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
