--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </header>
     
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
+        <section class="section_solution">
+            <h1 class="section_solution_h1">Effective Solutions for Your Business</h1>
             <button type="button" class="button_order">Order Service</button>
         </section>
         
