--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     
     <main>
         <section class="section_solution">
-            <h1 class="section_solution_h1">Effective Solutions for Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button" class="button_order">Order Service</button>
         </section>
         
-        <section>
+        <section class="section_benefit">
             <h2>Test</h2>
             <ul>
                 <li>
