--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <main>
         <section class="section_solution">
-            <h1 class="section_solution_h1">Effective Solutions for Your Business</h1>
+            <h1 class="section_solution_title">Effective Solutions for Your Business</h1>
             <button type="button" class="button_order">Order Service</button>
         </section>
         
