--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
             </ul>
         </section>
         
-        <section>
-            <h2>Our Team</h2>
+        <section class="our_team">
+            <h2 class="our_team_title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="benefit_title">Mark Guerrero</h3>
+                    <p class="benefit_p">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="benefit_title">Tom Ford</h3>
+                    <p class="benefit_p">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="benefit_title">Camila Garcia</h3>
+                    <p class="benefit_p">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="benefit_title">Daniel Wilson</h3>
+                    <p class="benefit_p">UI Designer</p>
                 </li>
             </ul>
         </section>
