--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
         <section class="our_team">
             <h2 class="our_team_title">Our Team</h2>
             <ul>
-                <li>
+                <li class="our_team_img"> 
                     <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" class="our_team_img">
                     <h3 class="benefit_title">Mark Guerrero</h3>
                     <p class="benefit_p">Product Designer</p>
                 </li>
-                <li>
+                <li class="our_team_img">
                     <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260" class="our_team_img">
                     <h3 class="benefit_title">Tom Ford</h3>
                     <p class="benefit_p">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="our_team_img">
                     <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" class="our_team_img">
                     <h3 class="benefit_title">Camila Garcia</h3>
                     <p class="benefit_p">Marketing</p>
                 </li>
-                <li>
+                <li class="our_team_img">
                     <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" class="our_team_img">
                     <h3 class="benefit_title">Daniel Wilson</h3>
                     <p class="benefit_p">UI Designer</p>
