--- a/index.html
+++ b/index.html
@@ -66,60 +66,60 @@
             <h2 class="our_team_title">Our Team</h2>
             <ul>
                 <li class="our_team_img"> 
-                    <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" class="our_team_img">
+                    <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260" >
                     <h3 class="benefit_title">Mark Guerrero</h3>
                     <p class="benefit_p">Product Designer</p>
                 </li>
                 <li class="our_team_img">
-                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260" class="our_team_img">
+                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="benefit_title">Tom Ford</h3>
                     <p class="benefit_p">Frontend Developer</p>
                 </li>
                 <li class="our_team_img">
-                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" class="our_team_img">
+                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260" >
                     <h3 class="benefit_title">Camila Garcia</h3>
                     <p class="benefit_p">Marketing</p>
                 </li>
                 <li class="our_team_img">
-                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260" class="our_team_img">
+                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="benefit_title">Daniel Wilson</h3>
                     <p class="benefit_p">UI Designer</p>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>Our Portfolio</h2>
+        <section class="our_portfolio">
+            <h2 class="our_portfolio_title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="benefit_title">Banking App</h3>
+                    <p class="benefit_p">App</p>
                 </li>
                 <li>
                     <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="benefit_title">Cashless Payment</h3>
+                    <p class="benefit_p">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="benefit_title">Meditation App</h3>
+                    <p class="benefit_p">App</p>
                 </li>
                 <li>
                     <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="benefit_title">Taxi Service</h3>
+                    <p class="benefit_p">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="benefit_title">Screen Illustrations</h3>
+                    <p class="benefit_p">Design</p>
                 </li>
                 <li>
                     <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="benefit_title">Online Courses</h3>
+                    <p class="benefit_p">Marketing</p>
                 </li>
             </ul>
         </section>
