--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         </section>
     </main>
 
-    <footer>
-        <a href="/">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="/" class="logo_footer">Web<span class="span_footer">Studio</span></a>
+        <p class="footer_p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
