--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav class="nav_menu">
             <a href="/" class="logo">Web<span class="logo_span">Studio</span></a>
             <ul>
-                <li><a href="/">Studio</a></li>  
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="/" class="nav_menu_link">Studio</a></li>  
+                <li><a href="" class="nav_menu_link">Portfolio</a></li>
+                <li><a href="" class="nav_menu_link">Contacts</a></li>
             </ul>
         </nav>
         
