--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         
         <address class="nav_address">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="nav_address_a">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="nav_address_a">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
