--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-
-    
-
-
 </head>
 <body>
     <header>
@@ -37,7 +33,7 @@
     <main>
         <section class="section_solution">
             <h1 class="section_solution_title">Effective Solutions for Your Business</h1>
-            <button type="button" class="button_order">Order Service</button>
+            <button type="button" class="button_main">Order Service</button>
         </section>
         
         <section class="section_benefit">
